# functional_programming_lab_4

./: .gitignore  Dockerfile  README.md
.github/workflows/: ocaml-chatbot-edsl.yml
ocaml-chatbot-edsl/: dune-project  ocaml-chatbot-edsl.opam
ocaml-chatbot-edsl/lib/: dune  ocaml_chatbot_edsl.ml  telegram.ml
ocaml-chatbot-edsl/test/: dune  test_ocaml_chatbot_edsl.ml
