(lang dune 3.20)

(name ocaml-chatbot-edsl)

(generate_opam_files true)

(source
 (github nghiaphamhb/functional_programming_lab_4))

(authors "Pham Nghia <phamdangtrungnghia@gmail.com>")

(maintainers "Pham Nghia <phamdangtrungnghia@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml-chatbot-edsl)
 (synopsis "Create chat bots in telegram on OCaml")
 (description "None")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
